welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: type mismatch;
 found   : Boolean(true)
 required: Int
		case (a,b,c,d) if (a>=13 && a<=20) => return true
                                                             ^countTeen:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
		case (a,b,c,d) if (b>=13 && b<=20) => return true
                                                             ^countTeen:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
		case (a,b,c,d) if (c>=13 && c<=20) => return true
                                                             ^countTeen:6: error: type mismatch;
 found   : Boolean(true)
 required: Int
		case (a,b,c,d) if (d>=13 && d<=20) => return true
                                                             ^countTeen:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
		case (_,_,_,_) => return false
                                         ^