welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	(a,b,c,d) match {
		case (a,b,c,d) if (a>=13 && a<=20) => return true
		case (a,b,c,d) if (b>=13 && b<=20) => return true
		case (a,b,c,d) if (c>=13 && c<=20) => return true
		case (a,b,c,d) if (d>=13 && d<=20) => return true
		case (_,_,_,_) => return false
	}
}
